<resources>
    <string name="app_name">圣爸爸</string>
    <string name="me_grid_release">Release record</string>
    <string name="me_grid_team">My team</string>
    <string name="me_grid_recode">My QR code</string>
    <string name="me_grid_exchange">TOKEN exchange</string>
    <string name="me_grid_information">Personal information</string>
    <string name="me_grid_news">News announcement</string>
    <string name="me_grid_psw">Change Password</string>
    <string name="me_grid_safe">Modify security code</string>
    <string name="me_grid_about">About</string>
    <string name="network_fail">The network is abnormal. Please check the network and try again.</string>
    <string name="srl_header_pulling">Pull down to refresh</string>
    <string name="home_sell">Sell</string>
    <string name="home_buy">Buying</string>
    <string name="cancel">Cancel</string>
    <string name="srl_header_refreshing">Refreshing</string>
    <string name="srl_header_release">Release immediate refresh</string>
    <string name="srl_header_finish">Refresh completed</string>
    <string name="srl_header_update">"'Last update' M-d HH:mm"</string>
    <string name="srl_footer_pulling">Pull up and load more</string>
    <string name="srl_footer_release">Release immediate load</string>
    <string name="srl_footer_loading">loading</string>
    <string name="srl_footer_finish">Loading completed</string>
    <string name="srl_footer_failed">Failed to load</string>
    <string name="srl_footer_nothing">No more data</string>
    <string name="home_change">Transaction</string>
    <string name="home_me">My</string>
    <string name="login_add_zh">Please fill in the account number</string>
    <string name="login_add_psw">Please fill in the password</string>
    <string name="login_forget_psw">forget password</string>
    <string name="login_register">Go to register</string>
    <string name="login_btn">login</string>
    <string name="login_psw_hint">Password must be between 6&#8211;20 characters</string>
    <string name="login_input_psw">Please enter your password</string>
    <string name="login_success">login successful</string>
    <string name="login_input_zh">please enter your account</string>
    <string name="register_dti_zh">Register DTI account</string>
    <string name="register_get_captcha">get verification code</string>
    <string name="register_realname">actual name</string>
    <string name="register_input_realname">Enter the real name on your ID card</string>
    <string name="register_set_psw">set password</string>
    <string name="register_confirm_psw">confirm password</string>
    <string name="register_input_psw">Must be the same as the password you set</string>
    <string name="register_invitation_code">Invitation code</string>
    <string name="register_input_invitation_code">Enter your invitation code</string>
    <string name="register_select_area">select area</string>
    <string name="register_phone">cellphone number</string>
    <string name="register_input_phone">please enter your phone number</string>
    <string name="register_captcha">Verification code</string>
    <string name="register_input_captcha">Acquired verification code</string>
    <string name="register">registered</string>
    <string name="register_realname_hint">please enter your real name</string>
    <string name="register_psw_hint">Please set your password</string>
    <string name="register_input_psw_hint">Please enter a confirmation password</string>
    <string name="register_input_psw_repeat_hint">Confirm password must be between 6&#8211;20 characters</string>
    <string name="register_psw_repeat_no">The password input is inconsistent twice, please re-enter</string>
    <string name="register_input_invitation_code_hint">Please enter the invitation code</string>
    <string name="register_phone_hint">The number of mobile phone numbers is incorrect</string>
    <string name="captcha_no">Verification code must be filled</string>
    <string name="captcha_send_success">Send verification code successfully</string>
    <string name="register_success">Registration success</string>
    <string name="confirm">Sure</string>
    <string name="about_us">About us</string>
    <string name="loading">Loading&#8230;</string>
    <string name="user_no">Numbering</string>
    <string name="phone_colon">telephone</string>
    <string name="call">call</string>
    <string name="alipay">alipay</string>
    <string name="wechat">wechat</string>
    <string name="bank_name">bank_name</string>
    <string name="bank_switch">Account opening branch</string>
    <string name="bank_no">Bank card number</string>
    <string name="input_psw_hint">enter password</string>
    <string name="psw_format_hint">Password is 6&#8211;20 digits and letter combination</string>
    <string name="set_psw_success">Set successfully</string>
    <string name="me_information">My Profile</string>
    <string name="user_id">Member number</string>
    <string name="phone">phone number</string>
    <string name="id_card_no">ID number</string>
    <string name="input_safe_psw">Enter security code</string>
    <string name="id_card_hint">ID number cannot be empty</string>
    <string name="alipay_input_hint">Alipay number cannot be empty</string>
    <string name="wechat_input_hint">Wechat number cannot be empty</string>
    <string name="bank_name_input_hint">Bank name cannot be empty</string>
    <string name="bank_switch_hint">Account opening branch cannot be empty</string>
    <string name="bank_no_hint">Bank card number cannot be empty</string>
    <string name="input_safe_psw_hint">Please enter the security code</string>
    <string name="please_input">please enter</string>
    <string name="save">save</string>
    <string name="save_success">Successfully saved</string>
    <string name="news_notice">News announcement</string>
    <string name="news_details">Announcement details</string>
    <string name="me_recode">My QR code</string>
    <string name="me_exclusive_recode">My exclusive QR code</string>
    <string name="save_recode">Save QR code</string>
    <string name="copy_share_url">Copy share link</string>
    <string name="need_authorization_upload_img">Requires authorization to operate the image</string>
    <string name="copy">Copied</string>
    <string name="save_photo">Saved to album</string>
    <string name="release_list">Release record</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="email_content">Content of email</string>
    <string name="inbox_time">Receiving time</string>
    <string name="outbox_time">Shipping time</string>
    <string name="me_team">My team</string>
    <string name="please_input_dti_num">Please enter the DTI amount</string>
    <string name="yue">Balance</string>
    <string name="input_change_dti_num">Enter the amount of redemption DTI</string>
    <string name="confirm_change">Confirm exchange</string>
    <string name="change_list">Redemption record</string>
    <string name="change_success">Successful redemption</string>
    <string name="single">single</string>
    <string name="yes_change">Convertible</string>
    <string name="update_psw">Change Password</string>
    <string name="current_psw">Current password</string>
    <string name="new_psw">New password</string>
    <string name="update_safe_psw">Modify security code</string>
    <string name="current_safe_psw">Current security code</string>
    <string name="news_safe_psw">New security code</string>
    <string name="confirm_safe_psw">Confirm security code</string>
    <string name="please_current_psw">Please enter your current password</string>
    <string name="please_input_current_news_psw">Please enter a new password</string>
    <string name="new_psw_must_hint">The new password must be between 6&#8211;20 characters</string>
    <string name="please_current_safe_psw">Please enter the current security code</string>
    <string name="safe_new_psw_must_hint">Security code must be between 6&#8211;20 characters</string>
    <string name="please_input_current_new_safe_psw">Please enter a new security code</string>
    <string name="new_safe_psw_must_hint">The new security code must be between 6&#8211;20 characters</string>
    <string name="input_confirm_safe_psw">Please enter the confirmation security code</string>
    <string name="new_safe_psw_and_safe_psw_no">New security code and confirmation security code are inconsistent</string>
    <string name="psw_length">The password is 6&#8211;20 digits in length.</string>
    <string name="update_success">Successfully modified</string>
    <string name="write_email">write an email</string>
    <string name="send">send</string>
    <string name="email_title">Email_title</string>
    <string name="email_title_must_length">Must be between 2 and 50 characters</string>
    <string name="email_content_hint">Cannot be empty, currently 0 words have been entered, you can also enter 500 words</string>
    <string name="email_current_input">Currently entered</string>
    <string name="character_may_input">Word, you can also enter</string>
    <string name="character">Word</string>
    <string name="hint">prompt</string>
    <string name="email_fail">The email has not been sent. Are you sure to cancel it?</string>
    <string name="email_title_must">Title must be between 2 and 50 characters</string>
    <string name="content_exist">the content can not be blank</string>
    <string name="send_success">Sent successfully</string>
    <string name="search_seller_tel">Search seller phone number</string>
    <string name="search_buyer_tel">Search buyer phone number</string>
    <string name="input_search_content">Enter search content</string>
    <string name="search">Search</string>
    <string name="search_no_user">No related users were found</string>
    <string name="buy_success">Successful buy</string>
    <string name="buy_num">Purchase quantity</string>
    <string name="sell_num">Quantity of sale</string>
    <string name="price">Price</string>
    <string name="dollar">Dollar</string>
    <string name="cny">RMB</string>
    <string name="total">Total</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="input_captcha">Enter confirmation code</string>
    <string name="safe_psw_exist">Security code cannot be empty</string>
    <string name="success_sell">Successfully sold</string>
    <string name="data_null">No data</string>
    <string name="current_price">Current price</string>
    <string name="apply_num">Number of applications</string>
    <string name="input_num">Please enter the quantity</string>
    <string name="buy_list">Buying list</string>
    <string name="price_exist">Unit price cannot be empty</string>
    <string name="apply_num_no">The number of applications cannot be empty</string>
    <string name="min">Lowest</string>
    <string name="max">Highest</string>
    <string name="issue_success">Successfully released</string>
    <string name="sell_list">Sale list</string>
    <string name="network_fail_try">There is currently no network, click refresh</string>
    <string name="property">Assets</string>
    <string name="wait_release">To be released</string>
    <string name="exit">Exit</string>
    <string name="confirm_exit">Are you sure you want to quit?</string>
    <string name="change">Transaction</string>
    <string name="deal_list">Transaction list</string>
    <string name="finish">Completed</string>
    <string name="china_cn">简体中文</string>
    <string name="us">English</string>
    <string name="th">ภาษาไทย</string>
    <string name="order_number">Order number</string>
    <string name="distribution_way">Delivery Method</string>
    <string name="order_remark">order notes</string>
    <string name="input_content_and_max">Please enter the content, input up to 500 words.</string>
</resources>