<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="70dp"
        android:layout_height="140dp"
        android:background="@drawable/language_box"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/language_cn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/china_cn"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#333333" />

        <TextView
            android:id="@+id/language_en_us"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/us"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#333333" />

        <TextView
            android:id="@+id/language_th"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/th"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>